# Xelo

./: .env.example  .gitattributes  .gitignore  .pypirc  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  healthcare.json  index.html  package-lock.json  package.json  pyproject.toml  velo.sh  xelo.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
dist_0_1_1/: xelo-0.1.1-py3-none-any.whl
dist_new/: xelo-0.1.0-py3-none-any.whl
dist_xelo/: xelo-0.1.0-py3-none-any.whl
docs/: CHANGELOG.md  README.md  XELO-Disclaimer.md  aibom-schema.md  atlas-mitre.md  cli-reference.md  developer-guide.md  doc.html  example-openai-cs-agents.md  getting-started.md  index.html  llms.txt  style.css  troubleshooting.md  vulnerability-scanning.md
llm-runs/: combine-xelo-and-toolbox-plan.md  google-generative-ai-workshops-gap-plan.md  iac-extractor-security-plan.md  nist_ai_rmf_nuguard_standard.json  owasp_ai_top10_nuguard_standard.json  rag-chatbot-demo-gap-plan.md  soc2_type2_nuguard_standard.json  vla-expansion-plan.md
src/ai_sbom/: __init__.py  ast_parser.py  cdx_tools.py  cli.py  config.py  deps.py  extractor.py  llm_client.py  merger.py  models.py  serializer.py  types.py
src/ai_sbom/adapters/: __init__.py  base.py  data_classification.py  dockerfile.py  frameworks.py  models_kb.py  nginx.py  patterns.py  privilege.py  registry.py  yaml_adapters.py
src/ai_sbom/core/: __init__.py  application_summary.py  confidence.py  gap_fill.py  ts_parser.py  verification.py
src/ai_sbom/schemas/: __init__.py  aibom.schema.json
src/xelo/: __init__.py  ast_parser.py  cli.py  config.py  extractor.py  merger.py  models.py  types.py
src/xelo/adapters/: base.py  data_classification.py  dockerfile.py  iac.py  privilege.py  registry.py  yaml_adapters.py
src/xelo/adapters/python/: agno.py  (+9 more)
src/xelo/core/: application_summary.py  gap_fill.py
src/xelo/schemas/: aibom.schema.json  aibom.schema.json-old
src/xelo/toolbox/: cli.py  core.py  grype_client.py
tests/: conftest.py  setup-claude.sh  test_atlas_annotator.py  test_cli.py  test_config.py  test_cyclonedx.py  test_data_classification.py  test_deps.py  test_extraction.py  test_mcp_adapter.py  test_merger.py  test_milo_style.py  test_parser.py  test_privilege.py  test_public_api.py  test_schema.py  test_vulnerability_rules.py
tests/benchmark/: README.md  __init__.py  debug_fetch.py  evaluate.py  evaluate_policies.py  evaluate_risk.py  evaluate_streaming.py  evaluation_results.json  schemas.py  search_repos.py  test_repo_access.py
tests/benchmark/policies/: eu_ai_act.json  hipaa.json
tests/benchmark/tests/: test_policy_benchmark.py
tests/fixtures/: healthcare_voice_agent_output.json
tests/fixtures/openai_agents_triage/: agents.py
tests/smoke/: test_healthcare_voice_agent.py
tests/test-results/: discovered_assets_20260302_201255.csv  discovered_assets_20260302_202402.csv  discovered_assets_20260302_215305.csv  discovered_assets_20260302_220936.csv  discovered_assets_20260302_223751.csv  discovered_assets_20260302_225234.csv  discovered_assets_20260302_231604.csv  evaluation_results_20260302_201255.json  evaluation_results_20260302_201528.json  evaluation_results_20260302_202243.json  evaluation_results_20260302_202402.json  evaluation_results_20260302_212738.json  evaluation_results_20260302_214330.json  evaluation_results_20260302_221502.json  evaluation_results_20260302_223751.json  evaluation_results_20260302_224248.json  evaluation_results_20260302_225234.json  evaluation_results_20260302_231404.json  evaluation_results_20260302_231604.json
tests/test_toolbox/: evaluate.py  evaluate_policies.py  schemas.py  test_basic.py  test_policy_benchmark.py
tests/test_toolbox/policies/: nist_ai_rmf.json  owasp_ai_top_10.json
(+102 files in other folders)
